--- a/src/theme/default/styles/form.css
+++ b/src/theme/default/styles/form.css
@@ -36,3 +36,24 @@ textarea, select {
 .slim-scrollbar::-webkit-scrollbar-thumb {
     background-color: #bdbdbd;
 }
+
+.hidden-scrollbar {
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+}
+
+.hidden-scrollbar::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
+    background-color: #f5f5f5;
+}
+
+.hidden-scrollbar::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+    background-color: #f5f5f5;
+    display: none;
+}
+
+.hidden-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #bdbdbd;
+}
