--- a/src/theme/theme-1/styles/form.css
+++ b/src/theme/theme-1/styles/form.css
@@ -17,22 +17,23 @@ textarea, select {
     @apply w-full p-2 border border-zinc-300 rounded;
 }
 
-.slim-scrollbar {
+.hidden-scrollbar {
     -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
-.slim-scrollbar::-webkit-scrollbar-track {
+.hidden-scrollbar::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
     box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
     background-color: #f5f5f5;
 }
 
-.slim-scrollbar::-webkit-scrollbar {
-    width: 6px;
-    height: 6px;
+.hidden-scrollbar::-webkit-scrollbar {
+    width: 0;
+    height: 0;
     background-color: #f5f5f5;
+    display: none;
 }
 
-.slim-scrollbar::-webkit-scrollbar-thumb {
+.hidden-scrollbar::-webkit-scrollbar-thumb {
     background-color: #bdbdbd;
 }
